fixes for new issues "HighTech > In Darkmode, moving from one page to another, page flicker to lightmode" and "HighTect> Virtual map for Smart Security > Under Related Information, Text link alighnment issue"

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/topic/content.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/topic/content.less
@@ -426,3 +426,8 @@ html.adobeguides-text-size {
 html#adobeguides-dark-contrast .footer .gu-footer_social-icon {
   filter: invert(80%) brightness(95%) contrast(90%);
 }
+
+.base-topic-page-section div.topic .related-links .link {
+  margin-bottom: 0.25rem;
+  margin-left: -3px;
+}
